--- a/app/views/roots/index.html.haml
+++ b/app/views/roots/index.html.haml
@@ -1,1 +1,19 @@
-aaaaaa
+.wrapper
+
+= render 'root/header'
+
+
+
+
+
+
+-#midle-contennt
+
+
+
+
+
+
+= render 'root/footer'
+= render 'root/footer2'
+= render 'root/footer3'
