--- a/app/assets/stylesheets/roots.scss
+++ b/app/assets/stylesheets/roots.scss
@@ -1,3 +1,67 @@
-// Place all the styles related to the roots controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.slick {
+  width: 100%;
+  height: 390px;
+  background-color: rgb(87, 86, 86);
+}
+ .slide-image{
+  width: 100%;
+  height: 390px;
+ }
+
+.product-container {
+  height: 1900px;
+  width: 100%;
+  background-color: rgb(245, 245, 245);
+  padding-top: 20px;
+  &_title {
+    height: 40px;
+    text-align: center;
+    font-size: 26px;
+    font-weight: bold;
+    opacity: 0.7;
+  }
+  &_box__clearfix {
+    height: 440px;
+    width: 952px;
+    margin: 0 auto;
+    .text_place {
+      font-size: 22px;
+      margin: 10px 10px;
+      text-align: center;
+      font-weight: bold;
+      color: rgb(36, 187, 233);
+    }
+    .product-container_contents__box-clearfix {
+      height: 330px;
+      width: 952px;
+      margin: 0 auto;
+    }
+    .view-more {
+      height: 14px;
+      padding: 20px 30px;
+      font-size: 14px;
+      color: rgb(36, 187, 233);
+      text-align: right;
+    }
+  }
+}
+.breadcrumbs {
+  border-top: 1px solid #eee;
+  padding-left: 210px;
+  height: 48px;
+  font-size: 14px;
+  line-height: 48px;
+  text-decoration: none;
+  letter-spacing: 1px;
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 1);
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  .current {
+    font-weight: 600;
+  }
+}
