--- a/app/views/roots/index.html.haml
+++ b/app/views/roots/index.html.haml
@@ -1,19 +1,90 @@
 .wrapper
 
-= render 'root/header'
-
-
-
-
+= render 'roots/header'
 
 
 -#midle-contennt
+    .product-container
+      %h2.product-container_title
+        ピックアップカテゴリー
+      .product-container_box__clearfix
+        .text_place 
+          レディース 新着アイテム
+        .product-container_contents__box-clearfix
+          -# - @ladies.each do |product|
+            -# = render 'item-card', product: product
+        .view-more
+          全ての商品を見る
+
+      .product-container_box__clearfix
+        .text_place 
+          メンズ 新着アイテム
+        .product-container_contents__box-clearfix
+          -# - @mens.each do |product|
+            -# = render 'item-card', product: product
+        .view-more
+          全ての商品を見る
+
+      .product-container_box__clearfix
+        .text_place 
+          ベビー・キッズ 新着アイテム
+        .product-container_contents__box-clearfix
+          -# - @kids.each do |product|
+            -# = render 'item-card', product: product
+        .view-more
+          全ての商品を見る
+
+      .product-container_box__clearfix
+        .text_place 
+          コスメ・香水・美容 新着アイテム
+        .product-container_contents__box-clearfix
+          -# - @cosmetics.each do |product|
+            -# = render 'item-card', product: product
+        .view-more
+          全ての商品を見る
+    .product-container
+
+      %h2.product-container_title
+        ピックアップブランド
+
+      .product-container_box__clearfix
+        .text_place 
+          シャネル 新着アイテム
+        .product-container_contents__box-clearfix
+          -# - @chanel.each do |product|
+            -# = render 'item-card', product: product
+        .view-more
+          全ての商品を見る
+
+      .product-container_box__clearfix
+        .text_place 
+          ルイ ヴィトン 新着アイテム
+        .product-container_contents__box-clearfix
+          -# - @loisvuitton.each do |product|
+            -# = render 'item-card', product: product
+        .view-more
+          全ての商品を見る
+
+      .product-container_box__clearfix
+        .text_place 
+          シュプリーム 新着アイテム
+        .product-container_contents__box-clearfix
+          -# - @supreme.each do |product|
+            -# = render 'item-card', product: product
+        .view-more
+          全ての商品を見る
+
+      .product-container_box__clearfix
+        .text_place 
+          ナイキ 新着アイテム
+        .product-container_contents__box-clearfix
+          -# - @nike.each do |product|
+            -# = render 'item-card', product: product
+        .view-more
+          全ての商品を見る
 
 
 
-
-
-
-= render 'root/footer'
-= render 'root/footer2'
-= render 'root/footer3'
+= render 'roots/footer'
+= render 'roots/footer2'
+= render 'roots/footer3'
