finish_header_footer_photo
#what

as a title

--- a/app/views/roots/index.html.haml
+++ b/app/views/roots/index.html.haml
@@ -5,7 +5,7 @@
   .body_main
     %div.slick
       %div
-        -# = image_tag ("https://www.mercari.com/jp/assets/img/common/jp/top/banner-camp.jpg") ,class:'slide-image'
+        = image_tag "heidi-fin-2TLREZi7BUg-unsplash.jpg", class: "slide-image"
       %div
         -# = image_tag ("https://www.mercari.com/jp/assets/img/common/jp/top/banner-natsukashi.jpg"),class:'slide-image'
       %div
@@ -90,6 +90,9 @@
         .view-more
           全ての商品を見る
 
+
+    .product-footer_image
+      = image_tag "heidi-fin-2TLREZi7BUg-unsplash.jpg", class: "footer-image"
 
     = render 'roots/footer'
     = render 'roots/footer2'
