--- a/app/views/roots/_header.html.haml
+++ b/app/views/roots/_header.html.haml
@@ -3,7 +3,7 @@
     .header_inner_top
       %h1.logo
         -#=link_to root_path do
-        = image_tag("//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?613028459")
+        = image_tag "fmarket_logo_red.svg"
 
       .header_form
         -# .header_form__textfield 何かお探しですか？
