--- a/app/assets/stylesheets/roots.scss
+++ b/app/assets/stylesheets/roots.scss
@@ -150,7 +150,13 @@
   width: 100%;
   height: 260px;
  }
-
+ .product-header {
+   text-align: center;
+   height: 170px;
+   font-size: 28px;
+   line-height: 170px;
+   font-weight: 600;
+ }
 .product-container {
   height: 1900px;
   width: 100%;
@@ -168,11 +174,22 @@
     width: 952px;
     margin: 0 auto;
     .text_place {
-      font-size: 22px;
-      margin: 10px 10px;
-      text-align: center;
-      font-weight: bold;
-      color: rgb(36, 187, 233);
+      
+      // margin: 10px 10px;
+      display: flex;
+      justify-content: space-between;
+      &__left {
+        font-size: 22px;
+        
+        font-weight: bold;
+        color: black;
+      }
+      &__right {
+        // text-align: right;
+        padding-top: 10px;
+        font-weight: bold;
+        color: rgb(36, 187, 233);
+      }
     }
     .product-container_contents__box-clearfix {
       height: 330px;
