--- a/app/views/roots/_header.html.haml
+++ b/app/views/roots/_header.html.haml
@@ -21,14 +21,14 @@
             .category_text
               カテゴリーから探す
             .category_icon
-              %i.fas.fa-align-justify.border-icon
+              %i.fas.fa-list-ul.border-icon
           %li.brand_nav
             -# = link_to  'ブランドから探す' brand_path do
             -# link先実装後にlink化します
             .brand_text
               ブランドから探す
             .brand_icon
-              %i.fas.fa-bookmark.label-icon
+              %i.fas.fa-tag.label-icon
       .right-contents
         .right-contents_user-nav
           %li.right-header_log-in
