--- a/app/views/roots/index.html.haml
+++ b/app/views/roots/index.html.haml
@@ -18,7 +18,7 @@
           .text_place__left
             レディース 新着アイテム
           .text_place__right
-            全ての商品を見る
+            もっと見る
         .product-container_contents__box-clearfix
           -# - @ladies.each do |product|
             -# = render 'item-card', product: product
@@ -29,7 +29,7 @@
           .text_place__left
             メンズ 新着アイテム
           .text_place__right
-            全ての商品を見る
+            もっと見る
           
         .product-container_contents__box-clearfix
           -# - @mens.each do |product|
@@ -40,7 +40,7 @@
           .text_place__left
             ベビー・キッズ 新着アイテム
           .text_place__right
-            全ての商品を見る
+            もっと見る
           
         .product-container_contents__box-clearfix
           -# - @kids.each do |product|
@@ -52,7 +52,7 @@
           .text_place__left
             コスメ・香水・美容 新着アイテム
           .text_place__right
-            全ての商品を見る
+            もっと見る
           
         .product-container_contents__box-clearfix
           -# - @cosmetics.each do |product|
@@ -66,7 +66,7 @@
           .text_place__left
             シャネル 新着アイテム
           .text_place__right
-            全ての商品を見る
+            もっと見る
           
         .product-container_contents__box-clearfix
           -# - @chanel.each do |product|
@@ -77,7 +77,7 @@
           .text_place__left
             ルイ ヴィトン 新着アイテム
           .text_place__right
-            全ての商品を見る
+            もっと見る
           
         .product-container_contents__box-clearfix
           -# - @loisvuitton.each do |product|
@@ -88,7 +88,7 @@
           .text_place__left
             シュプリーム 新着アイテム
           .text_place__right
-            全ての商品を見る
+            もっと見る
           
         .product-container_contents__box-clearfix
           -# - @supreme.each do |product|
@@ -99,7 +99,7 @@
           .text_place__left
             ナイキ 新着アイテム
           .text_place__right
-            全ての商品を見る
+            もっと見る
           
         .product-container_contents__box-clearfix
           -# - @nike.each do |product|
