--- a/app/assets/stylesheets/_footer3.scss
+++ b/app/assets/stylesheets/_footer3.scss
@@ -7,6 +7,7 @@
   position: fixed;
   z-index: 1000;
   &__circle {
+    cursor: pointer;
     height: 160px;
     width: 160px;
     border-radius: 50%;
