--- a/app/views/roots/index.html.haml
+++ b/app/views/roots/index.html.haml
@@ -7,7 +7,7 @@
         = image_tag "heidi-fin-2TLREZi7BUg-unsplash.jpg", class: "slide-image"
         
     .product-header
-      ピックアップカテゴリー
+      ピックアップカテゴリーaaaaaaaaaaaaaaaaaa
     .product-container
       .product-container_box__clearfix
         .text_place
