--- a/app/views/roots/_header.html.haml
+++ b/app/views/roots/_header.html.haml
@@ -16,7 +16,7 @@
           %li.category_nav
             
             .category_text
-              カテゴリーから探す
+              カテゴリーから探すaaaaaaaaaaaaaa
             .category_icon
               %i.fas.fa-list-ul.border-icon
           %li.brand_nav
