--- a/app/views/roots/_footer.html.haml
+++ b/app/views/roots/_footer.html.haml
@@ -1,7 +1,7 @@
 %footer.all_footer
   %nav.clearfix
     .footer_infomation
-      %h2 メルカリについて
+      %h2 メルカリについてccccccccccccccccccccccc
       %ul
         %li.footer 
           = link_to '会社概要','#', class:"link"
