finish_add_scss_application
#what

as a title

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,4 +5,5 @@
 @import "./header";
 @import "./middle";
 @import "./footer.scss";
-@import"./footer3";
+@import "./footer3";
+@import "./registration";
