--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "./reset";
+@import "config/colors";
 @import "./roots.scss";
 @import "./header";
 @import "./middle";
