--- a/app/views/roots/_header.html.haml
+++ b/app/views/roots/_header.html.haml
@@ -28,6 +28,6 @@
       .right-contents
         .right-contents_user-nav
           %li.right-header_log-in
-            = link_to '新規会員登録'
+            = link_to '新規会員登録', signup_path
           %li.right-header_sign-up
-            = link_to 'ログイン'
+            = link_to 'ログイン', login_path
