--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,7 @@
 @import "./footer3";
 @import "./registration";
 @import "./sign-up";
+@import "./sign_in";
+@import "./simple-header";
+@import "./simple-header2";
+@import "./simple-footer";
