--- a/app/views/devise/registrations/index.html.haml
+++ b/app/views/devise/registrations/index.html.haml
@@ -7,12 +7,10 @@
       .sign-up-container-main
         .sign-up-container-main-content
           =link_to signup_registration_path, class: "sign-up-container-main-content_mail" do
-            =fa_icon 'envelope', class: 'sign-up-container-main-content_mail_icon', text: "　　　　　　メールアドレスで登録"
+            %i.fas.fa-envelope.sign-up-container-main-content_mail_icon, text: "メールアドレスで登録"
 
-          = link_to user_facebook_omniauth_authorize_path, class: "sign-up-container-main-content_facebook" do
-            =fa_icon 'facebook-square', class: 'sign-up-container-main-content_facebook_icon', text: "　　　　　　　FaceBookで登録"
+            %i.fas.fa-facebook-square.sign-up-container-main-content_facebook_icon, text: "FaceBookで登録"
 
-          = link_to user_google_oauth2_omniauth_authorize_path, class: "sign-up-container-main-content_google" do
-            =fa_icon 'google', class: 'sign-up-container-main-content_google_icon', text: "　　　　　　　　Googleで登録"
+            %i.fas.fa-google.sign-up-container-main-content_google_icon, text: "Googleで登録"
 
   = render "shared/simple-footer"
