--- a/app/views/address/new.html.haml
+++ b/app/views/address/new.html.haml
@@ -3,13 +3,14 @@
   .main-container
     .main-container_contents
       .left-contents
-        -# = render 'mypage/mypage-side'
+        -# コメントアウトしました = render 'mypage/mypage-side'
       .right-contents
         %h2.contents-header
           本人情報の登録
         .contents-inner
-          - if current_user.profile.present?
-            = form_for current_user.profile, url: { controller: :identification, action: :update } do |identification_form|
+          - if true
+            %divs
+            = form_for @adresse, url: { controller: :address, action: :create } do |identification_form|
               %div
                 %p
                   お客さまの本人情報をご登録ください。
@@ -18,23 +19,23 @@
                 %p.text-top
                   =link_to '#', class: 'delete-deco' do
                     本人確認書類のアップロードについて
-                  = fa_icon 'chevron-right', class: 'arrow-right-icon'
+                  -# コメントアウトしました = fa_icon 'chevron-right', class: 'arrow-right-icon'
               .form-area
                 %label お名前
-                %p #{current_user.profile.last_name}#{current_user.profile.first_name}
+                -# コメントアウトしました %p #{current_user.profile.last_name}#{current_user.profile.first_name}
               .form-area
                 %label お名前カナ
-                %p #{current_user.profile.last_name_kana}#{current_user.profile.first_name_kana}
+                -# コメントアウトしました %p #{current_user.profile.last_name_kana}#{current_user.profile.first_name_kana}
               .form-area
                 %label 生年月日
-                %p #{current_user.profile.birth_year}/#{current_user.profile.birth_month}/#{current_user.profile.birth_day}
+                -# コメントアウトしました %p #{current_user.profile.birth_year}/#{current_user.profile.birth_month}/#{current_user.profile.birth_day}
               .form-area
                 %label 郵便番号
                 = identification_form.text_field :zipcode, class:"input-default", placeholder: "例) 1234567"
               .form-area
                 %label 都道府県
-                = identification_form.select :prefecture, Shipping.froms.keys.map {|k| [Shipping.froms[k], k]}, { prompt: '---' }, autofocus: true, class: 'select-prefecture'
-                = fa_icon 'chevron-down', class: 'arrow-icon'
+                -# コメントアウトしました = identification_form.select :prefecture, Shipping.froms.keys.map {|k| [Shipping.froms[k], k]}, { prompt: '---' }, autofocus: true, class: 'select-prefecture'
+                -# コメントアウトしました = fa_icon 'chevron-down', class: 'arrow-icon'
               .form-area
                 %label 市区町村
                 = identification_form.text_field :city, class:"input-default", placeholder: "例) 愛知県名古屋市"
@@ -48,7 +49,7 @@
               .text-bottom
                 =link_to '#', class:'delete-deco' do
                   本人情報の登録について
-                = fa_icon 'chevron-right', class: 'arrow-right-icon'
-  -# = render 'root/aside'
-  -# = render 'root/footer'
+                -# コメントアウトしました = fa_icon 'chevron-right', class: 'arrow-right-icon'
+  -# コメントアウトしました = render 'root/aside'
+  -# コメントアウトしました = render 'root/footer'
   
