--- a/app/assets/stylesheets/_sign_in.scss
+++ b/app/assets/stylesheets/_sign_in.scss
@@ -55,7 +55,7 @@
               bottom: 0;
               right: 267px;
               left: 0;
-              color: #f700ff;
+              color: lightseagreen;
               font-size: 28px;
               text-decoration: none;
             }
