--- a/app/assets/stylesheets/sign-up.scss
+++ b/app/assets/stylesheets/sign-up.scss
@@ -1,14 +1,16 @@
 .sign-up-box{
-  background: #eee;
-  height: 789px;
+  background: #f5f5f5;
+  height: 100%;
+  font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
 .sign-up{
     display: block;
+    padding-bottom: 90px;
 
     .sign-up-container{
       width: 700px;
-      height: 408px;
+      height: 382px;
       margin: 0 auto;
-      background: #f5f5f5;
+      background: white;
 
       &_header{
         padding: 32px 16px;
@@ -18,29 +20,30 @@
       }
 
       .sign-up-container-main{
-        padding: 64px;
+        padding-top: 40px;
         height: 182px;
         border-top: 1px solid #eee;
 
         .sign-up-container-main-content{
           width: 320px;
           height: 182px;
-          margin: 0 auto;
+          margin: 0  auto;
 
           &_mail{
             position: relative;
-            background: #eee;
-            color: #000;
+            background-color: #ea352d;
+            color: white;
             display: flex;
             width: 100%;
-            line-height: 50px;
+            line-height: 48px;
             font-size: 14px;
             text-decoration: none;
             &_icon{
               position: absolute;
               top: 30%;
               left: 16px;
-              font-size: 16px;
+              font-size: 20px;
+              color: white;
               text-align: center;
             }
           }
@@ -57,9 +60,9 @@
             text-decoration: none;
             &_icon{
               position: absolute;
-              top: 30%;
+              top: 15%;
               left: 16px;
-              font-size: 20px;
+              font-size: 33px;
               text-align: center;
             }
           }
@@ -77,6 +80,7 @@
             text-decoration: none;
             &_icon{
               position: absolute;
+              color: lightseagreen;
               top: 30%;
               left: 16px;
               font-size: 20px;
