addres-view-finish
アドレスのview、カラム、を追加しました。

--- a/app/views/roots/_header.html.haml
+++ b/app/views/roots/_header.html.haml
@@ -3,7 +3,7 @@
     .header_inner_top
       %h1.logo
         
-        = image_tag "fmarket_logo_red.svg"
+        = image_tag "fmarket_logo_red.svg", size: '100×100'
 
       .header_form
         
