--- a/app/assets/stylesheets/_address.scss
+++ b/app/assets/stylesheets/_address.scss
@@ -1,13 +1,24 @@
 .wrapper {
-
+  background-color: #f5f5f5;
+  .main-header{
+    &__box{
+      display: flex;
+      justify-content: center;
+      background-color: $gray;
+      &__image{
+        height: 100px;
+        width: 100px;
+      }
+    }
+  }
   .main-container {
     height: 1340px;
-    width: 100%;
+    width: 100vw;
     margin: 0 auto;
     background-color: $gray;
-    &_contents {
+    &__contents {
       margin: 0 auto;
-      width: 1020px;
+      width: 700px;
       padding: 40px 0 40px 0;
       .left-contents {
         float: left;
@@ -26,7 +37,6 @@
           text-align: center;
           font-weight: 600;
           font-size: 24px;
-          border-bottom: solid 1px rgb(245, 245, 245);
         }
         .contents-inner {
           width: 572px;
@@ -63,6 +73,9 @@
     height: 43px;
     width: 572px;
     margin: 40px 0 0;
+  }
+  .form-area-name{
+    margin: 10px 0 0;
   }
   .input-default {
     height: 28px;
@@ -104,7 +117,7 @@
     padding: 0 0px 0 7px;
     border-radius: 4px;
     border-color: rgb(206, 206, 206);
-    background-color: white;
+    background-color: $gray;
   }
   .arrow-icon {
     display: inline-block;
@@ -128,7 +141,7 @@
   display: block;
   text-align: right;
   margin: 40px 0 0;
-  text-decoration: none;
+  // text-decoration: none;
   color: $blue;
 }
 }
