--- a/app/views/address/new.html.haml
+++ b/app/views/address/new.html.haml
@@ -1,55 +1,52 @@
 .wrapper
-  
+  = render "shared/simple-header2" 
   .main-container
-    .main-container_contents
-      .left-contents
-        -# コメントアウトしました = render 'mypage/mypage-side'
+    .main-container__contents
       .right-contents
         %h2.contents-header
-          本人情報の登録
+          住所入力
         .contents-inner
+     
           - if true
             %divs
-            = form_for @adresse, url: { controller: :address, action: :create } do |identification_form|
-              %div
-                %p
-                  お客さまの本人情報をご登録ください。
-                  %br
-                  登録されたお名前・生年月日を変更する場合、本人確認書類の提出が必要になります。
-                %p.text-top
-                  =link_to '#', class: 'delete-deco' do
-                    本人確認書類のアップロードについて
-                  -# コメントアウトしました = fa_icon 'chevron-right', class: 'arrow-right-icon'
+            = form_for @adresse, url: { controller: :address, action: :create } do |adresse|
               .form-area
                 %label お名前
-                -# コメントアウトしました %p #{current_user.profile.last_name}#{current_user.profile.first_name}
+                %span.form-area__tag 必須
+                = adresse.text_field :first_name, class:"input-default", placeholder: "例) 山田"
+              .form-area-name
+                = adresse.text_field :last_name, class:"input-default", placeholder: "例) 彩"
               .form-area
                 %label お名前カナ
-                -# コメントアウトしました %p #{current_user.profile.last_name_kana}#{current_user.profile.first_name_kana}
-              .form-area
-                %label 生年月日
-                -# コメントアウトしました %p #{current_user.profile.birth_year}/#{current_user.profile.birth_month}/#{current_user.profile.birth_day}
+                %span.form-area__tag 必須
+                = adresse.text_field :first_name_kana, class:"input-default", placeholder: "例) ヤマダ"
+              .form-area-name
+                = adresse.text_field :last_name_kana, class:"input-default", placeholder: "例) アヤ"
               .form-area
                 %label 郵便番号
-                = identification_form.text_field :zipcode, class:"input-default", placeholder: "例) 1234567"
+                %span.form-area__tag 必須
+                = adresse.text_field :zipcode, class:"input-default", placeholder: "例) 1234567"
               .form-area
                 %label 都道府県
-                -# コメントアウトしました = identification_form.select :prefecture, Shipping.froms.keys.map {|k| [Shipping.froms[k], k]}, { prompt: '---' }, autofocus: true, class: 'select-prefecture'
-                -# コメントアウトしました = fa_icon 'chevron-down', class: 'arrow-icon'
+                %span.form-area__tag 必須
+                = adresse.text_field :prefecture, class: 'input-default', placeholder: "例) 愛知県"
               .form-area
                 %label 市区町村
-                = identification_form.text_field :city, class:"input-default", placeholder: "例) 愛知県名古屋市"
+                %span.form-area__tag 必須
+                = adresse.text_field :city, class:"input-default", placeholder: "例) 名古屋市"
               .form-area
                 %label 番地
-                = identification_form.text_field :district, class:"input-default", placeholder: "例) 中区栄1-1-1"
+                %span.form-area__tag 必須
+                = adresse.text_field :district, class:"input-default", placeholder: "例) 中区栄1-1-1"
               .form-area
                 %label 建物名
-                = identification_form.text_field :building, class:"input-default", placeholder: "例) メゾン南蛮 201"
-              = identification_form.submit "登録する", class: "btn-update btn-red"
-              .text-bottom
-                =link_to '#', class:'delete-deco' do
-                  本人情報の登録について
+                %span.form-area__tag 任意
+                = adresse.text_field :building, class:"input-default", placeholder: "例) メゾン南蛮 201"
+              .form-area
+                %label 電話
+                %span.form-area__tag 任意
+                = adresse.text_field :phone_number, class:"input-default", placeholder: "例）09012345678"
+              =link_to '/', class:'delete-deco' do
+                = adresse.submit "登録する", class: "btn-update btn-red"
                 -# コメントアウトしました = fa_icon 'chevron-right', class: 'arrow-right-icon'
-  -# コメントアウトしました = render 'root/aside'
-  -# コメントアウトしました = render 'root/footer'
-  
+  = render "shared/simple-footer"
