--- a/app/assets/stylesheets/_address.scss
+++ b/app/assets/stylesheets/_address.scss
@@ -105,7 +105,7 @@
     text-align: right;
     font-size: 14px;
   }
-  .select-prefecture {
+  #adresse_prefecture {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
