finish_add_logout_top_view_adjust
#what

as a title

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -156,6 +156,7 @@
             &_text {
               font-size: 14px;
               float: right;
+              margin-right: 3px;
             }
             &_icon {
               height: 20px;
@@ -167,6 +168,7 @@
                 padding: 2px;
                 position: absolute;
                 opacity: 0.5;
+                margin-left: 5px;
               }
             }
           }
@@ -177,6 +179,7 @@
             &_text {
               font-size: 14px;
               float: right;
+              margin-right: 12px;
             }
             &_icon {
               height: 20px;
