--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "./mypage";
 @import "./reset";
 @import "config/colors";
 @import "./roots.scss";
@@ -14,4 +15,4 @@
 @import "./simple-header2";
 @import "./simple-footer";
 @import "./address";
-@import "./logout"
+@import "./logout";
