finish_add_application
#what

as a title

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,6 @@
 @import "./simple-header2";
 @import "./simple-footer";
 @import "./address";
-@import "./logout"
+@import "./logout";
+@import "./profile-index";
+@import "./dones";
