--- a/app/assets/stylesheets/_simple-header2.scss
+++ b/app/assets/stylesheets/_simple-header2.scss
@@ -1,31 +1,73 @@
-.simple-header2{
+.simple-header{
   height: 128px;
-  text-align: center;
-  &_logo{
-    margin: 40px 0 0;
+  &__container{
+    display: flex;
+    justify-content: center;
+  }
+  &__logo{
+    width: 193px;
+    margin-top: 40px;
+  }
+  &__navigation{
     display: inline-block;
-    height: 49px;
-    &_url{
-      display: block;
-      height: 49px;
-      margin: 0 8px 0 0;
-      text-decoration: none;
-      &_image{
-        width: 185px;
-        height: 49px;
+    width: 508px;
+    padding-left: 44px;
+    padding-top: 40px;
+    &__list{
+      display: flex;
+      justify-content: space-between;
+      color: #888888;
+      font-size: 12px; 
+      &--item{
+        position: relative;
+        z-index: 1;
+        min-width: 60px; 
+        text-align: center;
+      }
+      &--status{
+        width: 12px;
+        height: 12px;
+        margin: 8px auto 0;
+        background-color: #ccc;
+        border-radius: 50%;
+      }
+      &--status:before, &--status:after{
+        position: absolute;
+        bottom: 5px;
+        z-index: -1;    
+        display: block;
+        content: '';
+        width: 100%;
+        height: 2px;
+        background-color: #ccc;
+      }
+      &--status:before{
+        right: 50%;
+      }
+      &--first:before, &--last:after{
+        position: initial;
+        bottom: initial;
+        z-index: initial;    
+        display: initial;
+        content: initial;
+        width: initial;
+        height: initial;
+        background: initial;
       }
     }
   }
-  &_bar{
-    padding: 40px 0 0 44px;
-    border: 0;
-    display: inline-block;
-    vertical-align: top;
-     &_clearfix{
-      &_text{
-      }
-      &_status{
-      }
-     }
-  }
+}
+
+.current{
+  font-weight: 600;
+  color: red; 
+}
+.done{
+  color: #888888; 
+}
+.current .simple-header__navigation__list--status,.current .simple-header__navigation__list--status:before{
+  background-color: red;
+}
+.done .simple-header__navigation__list--status,.done .simple-header__navigation__list--status:before,.done .simple-header__navigation__list--status:after{
+  background-color: red;
 }
