finsh_coding_logout_view
#what

as a title

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "./mypage_nav";
 @import "./mypage";
 @import "./reset";
 @import "config/colors";
