--- a/app/assets/stylesheets/logout.scss
+++ b/app/assets/stylesheets/logout.scss
@@ -1,6 +1,6 @@
 .mypage-box {
   width: 100vw;
-  height: 100vh;
+  height: 1430px;
   background-color: #cec9c9;
 }
 
@@ -10,6 +10,10 @@
   height: 100vh;
   margin: 0 200px;
   
+}
+
+.mypage-left_nav {
+  float: left;
 }
 
 .logout{
