--- a/app/views/shared/_mypage-nav.html.haml
+++ b/app/views/shared/_mypage-nav.html.haml
@@ -56,4 +56,4 @@
       %li
         = link_to "電話番号の確認","https://www.mercari.com/jp/", { :class => "mypage-nav__box__list__item" }
       %li
-        = link_to "ログアウト","https://www.mercari.com/jp/", { :class => "mypage-nav__box__list__item" }
+        = link_to "ログアウト",logout_path, { :class => "mypage-nav__box__list__item" }
