finish_user_sign_up_view
#what

as a title

--- a/app/views/address/new.html.haml
+++ b/app/views/address/new.html.haml
@@ -46,4 +46,5 @@
             .delete-deco
               = adresse.submit "登録する", class: "btn-update btn-red"
               -# コメントアウトしました = fa_icon 'chevron-right', class: 'arrow-right-icon'
-  = render "shared/simple-footer"
+  .address-footer
+    = render "shared/simple-footer"
