--- a/app/assets/stylesheets/_address.scss
+++ b/app/assets/stylesheets/_address.scss
@@ -137,11 +137,15 @@
     left: 12px;
   }
 
-.delete-deco{
-  display: block;
-  text-align: right;
-  margin: 40px 0 0;
-  // text-decoration: none;
-  color: $blue;
+  .delete-deco{
+    display: block;
+    text-align: right;
+    margin: 40px 0 0;
+    // text-decoration: none;
+    color: $blue;
+  }
 }
+
+.address-footer {
+  background-color: #f5f5f5;
 }
