--- a/app/assets/stylesheets/_simple-footer.scss
+++ b/app/assets/stylesheets/_simple-footer.scss
@@ -1,6 +1,7 @@
 .simple-footer{
+  // background-color: #f5f5f5;
   width: 456px;
-  height: 140px;
+  height: 160px;
   padding: 40px 0;
   margin: 0 auto;
   text-align: center;
