edit_identification_view
viewとcontrollerを編集

--- a/app/assets/stylesheets/identifications.scss
+++ b/app/assets/stylesheets/identifications.scss
@@ -98,3 +98,9 @@ text-align: right;
 text-decoration: none;
 color: $blue;
 }
+
+.form_box{
+  color: $white;
+  background-color: grey;
+  font-size: 15px;
+}
