--- a/app/views/identifications/edit.html.haml
+++ b/app/views/identifications/edit.html.haml
@@ -2,7 +2,7 @@
 
 .mypage-box
   %main.my-containercleanfix
-    -#= render 'mypage/mypage-side'
+    = render 'shared/mypage-nav'
     .right-contents
       %h2.contents-header
         本人情報の登録
@@ -15,35 +15,40 @@
                 %br
                 登録されたお名前・生年月日を変更する場合、本人確認書類の提出が必要になります。
               %p.text-top
-                =link_to '#', class: 'delete-deco' do
+                =link_to 'https://www.mercari.com/jp/help_center/article/495/', class: 'delete-deco' do
                   本人確認書類のアップロードについて>
             .form-area
               %label お名前
-              %p #{current_user.profile.last_name}#{current_user.profile.first_name}
+              %p #{current_user.profile.first_name}#{current_user.profile.last_name}
             .form-area
               %label お名前カナ
-              %p #{current_user.profile.last_name_kana}#{current_user.profile.first_name_kana}
+              %p #{current_user.profile.first_name_kana}#{current_user.profile.last_name_kana}
             .form-area
               %label 生年月日
               %p #{current_user.profile.birth_year}/#{current_user.profile.birth_month}/#{current_user.profile.birth_day}
             .form-area
               %label 郵便番号
+              %span.form_box 任意
               = identification_form.text_field :living_code, class:"input-default", placeholder: "例) 1234567"
             .form-area
               %label 都道府県
+              %span.form_box 任意
               = identification_form.select :living_state, Profile.living_states.keys,{}, class:"select-place"
             .form-area
               %label 市区町村
+              %span.form_box 任意
               = identification_form.text_field :living_city, class:"input-default", placeholder: "例) 東京都"
             .form-area
               %label 番地
+              %span.form_box 任意
               = identification_form.text_field :living_number, class:"input-default", placeholder: "例) 道玄坂1-1-1"
             .form-area
               %label 建物名
+              %span.form_box 任意
               = identification_form.text_field :living_building, class:"input-default", placeholder: "例) 青木荘 101号室"
             = identification_form.submit "登録する", class: "btn-update btn-red"
             .text-bottom
-              =link_to '#', class:'delete-deco' do
+              =link_to 'https://www.mercari.com/jp/help_center/article/423/', class:'delete-deco' do
                 本人情報の登録について
 
 = render 'roots/footer'
