--- a/app/views/shared/_mypage-nav.html.haml
+++ b/app/views/shared/_mypage-nav.html.haml
@@ -52,7 +52,7 @@
       %li
         = link_to "メール/パスワード","https://www.mercari.com/jp/", { :class => "mypage-nav__box__list__item" }
       %li
-        = link_to "本人情報",edit_identification_path, { :class => "mypage-nav__box__list__item" }
+        = link_to "本人情報","/identifications/#{current_user.id}/edit", { :class => "mypage-nav__box__list__item" }
       %li
         = link_to "電話番号の確認","https://www.mercari.com/jp/", { :class => "mypage-nav__box__list__item" }
       %li
