fix_mypages_nav_scss
#what

as a title

--- a/app/assets/stylesheets/_mypage_nav.scss
+++ b/app/assets/stylesheets/_mypage_nav.scss
@@ -24,7 +24,7 @@
         background: #fff;
         color: #333;
       }
-      .mypage-nav__box__list__item:hover{
+      &__item:hover{
         background: #eee;
       }
     }
