--- a/app/assets/stylesheets/_address.scss
+++ b/app/assets/stylesheets/_address.scss
@@ -109,9 +109,12 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    display: inline-block;
+    display: block;
     height: 48px;
     width: 100%;
+    max-width: 100%; 
+	  box-sizing: border-box;
+	  margin: 0;
     position: relative;
     font-size: 16px;
     padding: 0 0px 0 7px;
