--- a/app/assets/stylesheets/_address.scss
+++ b/app/assets/stylesheets/_address.scss
@@ -109,12 +109,9 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    display: block;
+    display: inline-block;
     height: 48px;
     width: 100%;
-    max-width: 100%; 
-	  box-sizing: border-box;
-	  margin: 0;
     position: relative;
     font-size: 16px;
     padding: 0 0px 0 7px;
@@ -144,11 +141,6 @@
     display: block;
     text-align: right;
     margin: 40px 0 0;
-    // text-decoration: none;
     color: $blue;
   }
-}
-
-.address-footer {
-  background-color: #f5f5f5;
 }
