mypage-show-change
mypageのimageを修正しました

--- a/app/views/mypages/show.html.haml
+++ b/app/views/mypages/show.html.haml
@@ -18,7 +18,7 @@
           %ul#tab-content-notification.mypage-item-list
             %li.mypage-item-list_links
               = link_to '#', class: "mypage-item-list_link" do
-                %img{alt: "" ,src:"//static.mercdn.net/images/mercari_profile.png",class: "news-size-icon",data_src:"//static.mercdn.net/images/mercari_profile.png"}
+                =image_tag "//static.mercdn.net/images/mercari_profile.png",class:"news-size-icon"
                 .mypage-item-news
                   .mypage-item-news_text お知らせ①
                   .mypage-item-news_time
@@ -26,7 +26,7 @@
 
             %li.mypage-item-list_links
               = link_to '#', class: "mypage-item-list_link" do
-                %img{alt: "" ,src:"//static.mercdn.net/images/mercari_profile.png",class: "news-size-icon",data_src:"//static.mercdn.net/images/mercari_profile.png"}
+                =image_tag "//static.mercdn.net/images/mercari_profile.png",class:"news-size-icon"
                 .mypage-item-news
                   .mypage-item-news_text お知らせ①
                   .mypage-item-news_time
@@ -34,7 +34,7 @@
 
             %li.mypage-item-list_links
               = link_to '#', class: "mypage-item-list_link" do
-                %img{alt: "" ,src:"//static.mercdn.net/images/mercari_profile.png",class: "news-size-icon",data_src:"//static.mercdn.net/images/mercari_profile.png"}
+                =image_tag "//static.mercdn.net/images/mercari_profile.png",class:"news-size-icon"
                 .mypage-item-news
                   .mypage-item-news_text お知らせ①
                   .mypage-item-news_time
@@ -42,7 +42,7 @@
 
             %li.mypage-item-list_links
               = link_to '#', class: "mypage-item-list_link" do
-                %img{alt: "" ,src:"//static.mercdn.net/images/mercari_profile.png",class: "news-size-icon",data_src:"//static.mercdn.net/images/mercari_profile.png"}
+                =image_tag "//static.mercdn.net/images/mercari_profile.png",class:"news-size-icon"
                 .mypage-item-news
                   .mypage-item-news_text お知らせ①
                   .mypage-item-news_time
@@ -50,7 +50,7 @@
 
             %li.mypage-item-list_links
               = link_to '#', class: "mypage-item-list_link" do
-                %img{alt: "" ,src:"//static.mercdn.net/images/mercari_profile.png",class: "news-size-icon",data_src:"//static.mercdn.net/images/mercari_profile.png"}
+                =image_tag "//static.mercdn.net/images/mercari_profile.png",class:"news-size-icon"
                 .mypage-item-news
                   .mypage-item-news_text お知らせ①
                   .mypage-item-news_time
@@ -63,3 +63,8 @@
 = render 'roots/footer2'
 = render 'roots/footer3'
     
+
+
+
+
+
