--- a/app/assets/stylesheets/identifications.scss
+++ b/app/assets/stylesheets/identifications.scss
@@ -20,15 +20,15 @@
       height: 1029px;
       padding: 40px;
       margin: 0 auto;
-      div {
+      .contens-title {
         height: 71px;
         width: 572px;
-        p {
+        .contens-sentence {
           margin: 8px 0 0;
           line-height: 1.5;
           font-size: 14px;
         }
-        .text-top {
+        .contens-link {
           color: $blue;
           text-decoration: none;
           line-height: 1.5;
@@ -78,8 +78,6 @@ text-align: right;
 font-size: 14px;
 }
 #profile_living_state.select-place {
-// -webkit-appearance: none;
-// -moz-appearance: none;
 appearance: none;
 display: inline-block;
 height: 48px;
