--- a/app/views/identifications/edit.html.haml
+++ b/app/views/identifications/edit.html.haml
@@ -9,12 +9,12 @@
       .contents-inner
         - if current_user.profile.present?
           = form_for current_user.profile, url: { controller: :identifications, action: :update } do |identification_form|
-            %div
-              %p
+            %div.contens-title
+              %p.contens-sentence
                 お客さまの本人情報をご登録ください。
                 %br
                 登録されたお名前・生年月日を変更する場合、本人確認書類の提出が必要になります。
-              %p.text-top
+              %p.contens-link
                 =link_to 'https://www.mercari.com/jp/help_center/article/495/', class: 'delete-deco' do
                   本人確認書類のアップロードについて>
             .form-area
