--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
 @import "./simple-header";
 @import "./simple-header2";
 @import "./simple-footer";
-@import "./address";
+@import "./adresses";
 @import "./logout";
 @import "./profile-index";
 @import "./dones";
