--- a/app/views/shared/_mypage-nav.html.haml
+++ b/app/views/shared/_mypage-nav.html.haml
@@ -44,7 +44,7 @@
       %li
         = link_to "プロフィール","/profiles/#{current_user.id}/edit", { :class => "mypage-nav__box__list__item" }
       %li
-        = link_to "発送元・お届け先住所変更","/address/#{current_user.id}/edit", { :class => "mypage-nav__box__list__item" }
+        = link_to "発送元・お届け先住所変更","/adresses/#{current_user.id}/edit", { :class => "mypage-nav__box__list__item" }
       %li
         = link_to "支払い方法","https://www.mercari.com/jp/", { :class => "mypage-nav__box__list__item" }
       %li
