--- a/app/views/signup/index.html.haml
+++ b/app/views/signup/index.html.haml
@@ -7,10 +7,10 @@
         = link_to registration_signup_index_path(:email_signup => "yes"), class: 'auth-main__inner--mail-btn', data: {"turbolinks"=> false} do
           %i.far.fa-envelope.auth-main__inner--mailer-icon
           メールアドレスで登録
-        = link_to user_facebook_omniauth_authorize_path, class: 'auth-main__inner--facebook-btn', method: :post do
+        -#= link_to user_facebook_omniauth_authorize_path, class: 'auth-main__inner--facebook-btn', method: :post do
           %i.fab.fa-facebook-square.auth-main__inner--facebook-icon
           Facebookで登録
-        = link_to user_google_oauth2_omniauth_authorize_path, class: 'auth-main__inner--google-btn', method: :post do
+        -#= link_to user_google_oauth2_omniauth_authorize_path, class: 'auth-main__inner--google-btn', method: :post do
           %i.fab.fa-google.auth-main__inner--google-icon
           Googleで登録
         - if session[:error] != nil
