--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,3 +1,4 @@
 aaaa
 .user-logout-main
   = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'user-logout-main__btn'
+  =render partial: 'layouts/footer'
