finish_coding_routes_and_top_page
#what

as a title

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,4 +1,5 @@
-aaaa
-.user-logout-main
-  = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'user-logout-main__btn'
-  =render partial: 'layouts/footer'
+=render partial: 'layouts/header'
+
+-# ここに真ん中のコンテンツをお願いします。
+  
+=render partial: 'layouts/footer'
