--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -44,7 +44,7 @@
         .right-contents
           .right-contents_user-nav
             %li.right-header_log-in
-              = link_to '新規会員登録', registration_signup_index_path
+              = link_to '新規会員登録', signup_index_path
             %li.right-header_sign-up
               = link_to 'ログイン', new_user_session_path
               = link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'user-logout-main__btn'
