--- a/app/views/signup/address.html.haml
+++ b/app/views/signup/address.html.haml
@@ -1,19 +1,19 @@
--# :css
--#   li:nth-child(3).signup-header__nav--list {
--#     color: #ea352d;
--#     font-weight: 600;
--#   }
--#   li:nth-child(n+1):nth-child(-n+3) .signup-header__nav--status{
--#     background-color: #ea352d;
--#   }
--#   li:nth-child(n+1):nth-child(-n+2) .signup-header__nav--status:after{
--#     background-color: #ea352d;
--#   }
--#   li:nth-child(n+2):nth-child(-n+3) .signup-header__nav--status:before{
--#     background-color: #ea352d;
--#   }
+:css
+  li:nth-child(3).signup-header__nav--list {
+    color: #ea352d;
+    font-weight: 600;
+  }
+  li:nth-child(n+1):nth-child(-n+3) .signup-header__nav--status{
+    background-color: #ea352d;
+  }
+  li:nth-child(n+1):nth-child(-n+2) .signup-header__nav--status:after{
+    background-color: #ea352d;
+  }
+  li:nth-child(n+2):nth-child(-n+3) .signup-header__nav--status:before{
+    background-color: #ea352d;
+  }
 .signup-third
-  -# = render 'shared/sign-up-header'
+  = render 'shared/sign-up-header'
   .third-main
     %section.third-main-wrapper
       .third-main-wrapper__title 発送元・お届け先住所入力
@@ -71,4 +71,4 @@
             = f.phone_field :address_phone_number, class: 'third-main-wrapper__form--input', placeholder: '09012345678'
             = render partial: 'error-message', locals: {user: @user, column: "address_phone_number"}
           = f.submit '次へ進む', class: 'third-main-wrapper__form--btn'
-  -# = render 'shared/user-footer'
+  = render 'shared/user-footer'
