--- a/app/assets/stylesheets/modules/layouts/_application.scss
+++ b/app/assets/stylesheets/modules/layouts/_application.scss
@@ -55,8 +55,9 @@
           appearance: none;
         }
         .search-icon {
-          height: 40px;
-          width: 44px;
+          height: 38px;
+          margin-right: 10px;
+          // width: 44px;
           float: right;
           cursor: pointer;
           background-color: rgb(243, 243, 243);
@@ -81,7 +82,7 @@
           width: 350px;
           display: flex;
           .category_nav {
-            width: 150px;
+            // width: 150px;
             display: inline-block;
             padding: 6px;
             cursor: pointer;
@@ -104,7 +105,7 @@
             }
           }
           .brand_nav {
-            width: 140px;
+            // width: 140px;
             display: inline-block;
             padding: 6px;
             cursor: pointer;
@@ -206,7 +207,7 @@
           }
           li.right-header_log-in {
             height: 30px;
-            width: 84px;
+            // width: 84px;
             display: block;
             padding: 0 10px;
             line-height: 30px;
@@ -226,7 +227,7 @@
           }
           .right-header_sign-up {
             height: 30px;
-            width: 56px;
+            // width: 56px;
             display: block;
             padding: 0 10px;
             margin-left: 10px;
