finish-header_image
#what

as a title

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,7 +5,7 @@
         #h2 スマホでかんたんフリマアプリ
         #p 今すぐ無料ダウンロード！
         .footer-top-inner__right-icon
-          = image_tag "/images/mercari.app.acon.png", size: "68x68", class: "footer-top-inner__right-icon-left"
+          -# = image_tag "/images/mercari.app.acon.png", size: "68x68", class: "footer-top-inner__right-icon-left"
           .footer-top-inner__right-app
             = link_to image_tag "/images/appstore.icon.png", size: "133x42", class: "footer-top-inner__right-app_icon-left", href:"https://apps.apple.com/jp/app/id667861049?l=ja"
 
