--- a/app/assets/stylesheets/modules/layouts/_application.scss
+++ b/app/assets/stylesheets/modules/layouts/_application.scss
@@ -254,6 +254,11 @@
   }
 }
 
+.header-top-image {
+  width: 100vw;
+  height: 340px;
+}
+
  @media screen and (max-width:1060px) {
   .main-header {
     height: 100px;
@@ -1063,7 +1068,7 @@
   .footer-top{
     width: 100%;
     height: 260px;
-    background-image: url("/images/footer-background-image.png");
+    background-image: url("heidi-fin-2TLREZi7BUg-unsplash.jpg");
     background-size:cover;
     &-inner{
   
@@ -1120,7 +1125,7 @@
       width: 300px;
       height: 260px;
       margin-left:30px;
-      background-image: url("//www-mercari-jp.akamaized.net/assets/img/common/jp/download_content_pc.png?2334484240");
+      // background-image: url("");
       background-size:cover;
       }
     }
