--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,4 @@
 @import './modules/sign-up/sign-up-forth';
 @import './modules/sign-up/sign-up-fifth';
 @import './modules/sign-in-page';
+@import "./products/index";
